Click on goal to see conversions for it

--- a/assets/package.json
+++ b/assets/package.json
@@ -12,7 +12,8 @@
     "phoenix_html": "file:../deps/phoenix_html",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-router-dom": "^5.1.2"
+    "react-router-dom": "^5.1.2",
+    "url-search-params-polyfill": "^7.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
