Fetch and display tweets (#27)

--- a/assets/package.json
+++ b/assets/package.json
@@ -13,6 +13,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
+    "react-tweet-embed": "^1.2.2",
     "url-search-params-polyfill": "^7.0.0"
   },
   "devDependencies": {
