--- a/assets/package.json
+++ b/assets/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "autoprefixer": "^9.7.4",
     "chart.js": "^2.9.3",
+    "datamaps": "^0.5.9",
     "phoenix": "file:../deps/phoenix",
     "phoenix_html": "file:../deps/phoenix_html",
     "react": "^16.12.0",
