Upgrade tailwind to 1.2.0 (#42)
* Upgrade config file

* Upgrade grey colour

* Update styles for dashboard

* Update styles for new site flow

* Update styles for user settings

* Update site setting styles

* Update other pages

* Adjust spacing

* Update last grey rules

* Purge css

--- a/assets/package.json
+++ b/assets/package.json
@@ -21,13 +21,14 @@
     "@babel/core": "^7.8.3",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.8.3",
+    "@fullhuman/postcss-purgecss": "^2.1.0",
     "babel-loader": "^8.0.6",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.2",
     "mini-css-extract-plugin": "^0.8.2",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
     "postcss-loader": "^3.0.0",
-    "tailwindcss": "^0.7.4",
+    "tailwindcss": "^1.2.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "4.39.2",
     "webpack-cli": "^3.3.10"
