New landing page (#47)
* Fix typo

* Update landing page with components from TailwindUI

* Update copy

* Update FAQ and testimonials

* Add feature section

* Update copy for integration

* Implement feedback

* Remove github button JS

* Update headings

* Update gray values

* Update CTA section

* Add copy

--- a/assets/package.json
+++ b/assets/package.json
@@ -6,6 +6,7 @@
     "watch": "webpack --mode development --watch"
   },
   "dependencies": {
+    "@tailwindcss/ui": "^0.1.3",
     "autoprefixer": "^9.7.4",
     "chart.js": "^2.9.3",
     "datamaps": "^0.5.9",
