Ignore Elixir Language Server files. (#65)

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ npm-debug.log
 # secrets files as long as you replace their contents by environment
 # variables.
 /config/*.secret.exs
+
+# Ignore Elixir Language Server files
+.elixir_ls
