Buld and push docker image to dockerhub

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,12 @@ before_install:
   - echo "CREATE DATABASE plausible_test" > $HOME/init.sql
   - docker pull yandex/clickhouse-server
   - docker run -d -p 8123:8123 --ulimit nofile=262144:262144 --volume=$HOME/init.sql:/docker-entrypoint-initdb.d/init.sql yandex/clickhouse-server
+  - docker build -t plausible/analytics .
 env:
   - MIX_ENV=test
 script: mix coveralls.travis
+deploy:
+  provider: script
+  script: bash docker_push
+  on:
+    branch: master
