--- a/assets/package.json
+++ b/assets/package.json
@@ -26,6 +26,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-flatpickr": "^3.10.0",
+    "react-flip-move": "^3.0.4",
     "react-router-dom": "^5.1.2",
     "tailwindcss": "^1.3.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
