Added clickhouse user and password (#243) (#244)

--- a/plausible-variables.sample.env
+++ b/plausible-variables.sample.env
@@ -18,5 +18,7 @@ SMTP_HOST_SSL_ENABLED=false
 SMTP_MX_LOOKUPS_ENABLED=false
 CLICKHOUSE_DATABASE_HOST=plausible_events_db
 CLICKHOUSE_DATABASE_NAME=plausible_events_db
+CLICKHOUSE_DATABASE_USER=default
+CLICKHOUSE_DATABASE_PASSWORD=
 DISABLE_AUTH=false
 DISABLE_REGISTRATION=false
