Create the admin user as a separate command (#233)
This means the migrations can always be run on startup, meaning the database won't get out of sync with the running application. It also means users who don't set the credential variables in their compose files don't keep creating admin users every time the application starts.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    command: sh -c "sleep 10 && /entrypoint.sh run"
+    command: sh -c "sleep 10 && /entrypoint.sh db migrate && /entrypoint.sh run"
     depends_on:
       - plausible_db
       - plausible_events_db
@@ -57,7 +57,7 @@ services:
     build:
       context: .
       dockerfile: ./Dockerfile
-    command: sh -c "sleep 10 && /entrypoint.sh db createdb && /entrypoint.sh db migrate"
+    command: sh -c "sleep 10 && /entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh db init-admin"
     depends_on:
       - plausible_db
       - plausible_events_db
