Fix for GeoIP container not starting when deploying Plausible (#308)
* Update docker-compose-geoip.yml

* Update docker-compose-geoip.yml

--- a/docker-compose-geoip.yml
+++ b/docker-compose-geoip.yml
@@ -36,6 +36,8 @@ services:
   # this requires an account at maxmind.com (https://www.maxmind.com/en/geolite2/signup)
   geoip:
     image: maxmindinc/geoipupdate
+    ports:
+      - 1080:1080
     environment:
       - GEOIPUPDATE_ACCOUNT_ID=<your-account-id>
       - GEOIPUPDATE_LICENSE_KEY=<your-license-key>
@@ -53,20 +55,22 @@ services:
     depends_on:
       - plausible_db
       - plausible_events_db
+      - geoip
       - fake_smtp
     ports:
       - 80:8080
     links:
       - plausible_db
       - plausible_events_db
+      - geoip
       - fake_smtp
     env_file:
       - plausible-variables.sample.env
     # only if you use the geioip container
+    environment:
+      - GEOLITE2_COUNTRY_DB=/geoip/GeoLite2-Country.mmdb
     volumes:
       - geoip:/geoip:ro
-    environment:
-      -
 
   setup:
     build:
@@ -76,9 +80,11 @@ services:
     depends_on:
       - plausible_db
       - plausible_events_db
+      - geoip
     links:
       - plausible_db
       - plausible_events_db
+      - geoip
     env_file:
       - plausible-variables.sample.env
 
