Use clickhouse_ecto for db connection (#317)
* Use clickhouse-ecto for stats

* Use clickhouse ecto instead of low-level clickhousex

* Remove defaults from event schema

* Remove all references to Clickhousex

* Document configuration change

* Ensure createdb and migrations can be run in a release

* Remove config added for debug

* Update plausible_variables.sample.env

--- a/plausible-variables.sample.env
+++ b/plausible-variables.sample.env
@@ -5,6 +5,7 @@ SIGNING_SALT=PL/THF0VMOzuv1bOcldjDzYFBLryvXNs
 HOST=localhost
 DATABASE_URL=postgres://postgres:postgres@plausible_db:5432/plausible_db
 DATABASE_TLS_ENABLED=false
+CLICKHOUSE_DATABASE_URL=http://default:@plausible_events_db/plausible_events_db
 ADMIN_USER_NAME=admin
 ADMIN_USER_EMAIL=admin@plausible.local
 ADMIN_USER_PWD=admin@1234!
@@ -16,9 +17,5 @@ SMTP_USER_NAME=fakeuser@plausible.local
 SMTP_USER_PWD=password
 SMTP_HOST_SSL_ENABLED=false
 SMTP_MX_LOOKUPS_ENABLED=false
-CLICKHOUSE_DATABASE_HOST=plausible_events_db
-CLICKHOUSE_DATABASE_NAME=plausible_events_db
-CLICKHOUSE_DATABASE_USER=default
-CLICKHOUSE_DATABASE_PASSWORD=
 DISABLE_AUTH=false
 DISABLE_REGISTRATION=false
